[package]
name = "stippling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.1"
display_utils = "0.4.0"
image = "0.25.5"
nalgebra = "0.33.2"
ordered-float = "4.5.0"
radsort = "0.1.0"
rand = "0.8.5"
voronoi = "0.1.4"
